unusual-spending/k8s/frontend/frontend-app.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
  labels:
    app: frontend-app
spec:
  ports:
    - name: ui
      port: 3000
      targetPort: 80
  selector:
    app: frontend-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  labels:
    app: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: io.github.jonarzz/unusual-spending-frontend:1.0.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - name: ui
              containerPort: 3000
